--- a/vendor.conf
+++ b/vendor.conf
@@ -1,5 +1,6 @@
 # vendor.conf is the file used by github.com/LK4D4/vndr (v0.0.1)
 
-github.com/bfirsh/funker-go 37fd8f2b349f311ecd6cd7ca0a1374a56ef6908e
-
+# this "workaround-tcp-keepalive" branch uses non-upstream funker.
+# Please refer to the commit log.
+# github.com/bfirsh/funker-go 37fd8f2b349f311ecd6cd7ca0a1374a56ef6908e
 
